# nmc

./: CMakeLists.txt
Assets/Shaders/: Common.h  Core.frag.glsl  Core.gfx.slang  Core.slang  Core.vert.glsl  Culling.comp.glsl  Culling.comp.slang  CullingPass.comp.glsl  CullingPass.comp.slang  Post.frag.glsl  Shadow.vert.glsl  Sky.frag.glsl  Sky.vert.glsl  Water.frag.glsl  Water.vert.glsl
Source/: General.h  Main.cpp  MapGen.cpp  MapGen.h  Player.cpp  Player.h  Renderer.cpp  Renderer.h  World.cpp  World.h
Source/DataStructures/: Arena.cpp  Arena.h  Array.cpp  Array.h  String.h
Source/Graphics/: NVulkan.cpp  NVulkan.h
Source/Math/: Mat.cpp  Mat.h  NMath.cpp  NMath.h  Quat.cpp  Quat.h  SIMD.cpp  SIMD.h  SIMD_x64.cpp  Vec.cpp  Vec.h
Source/Platform/: Platform.cpp  Platform.h  PlatformContext.h  PlatformWindows.cpp
Source/Window/: Keys.h  Window.h  WindowWindows.cpp
